--- a/style.css
+++ b/style.css
@@ -174,7 +174,8 @@ body {
 
 #social-media {
     background: #E9D5DA;
-    padding: 30px 0;
+    padding-top: 10px;
+    padding-bottom: 80px;
 }
 
 #social-media p {
@@ -198,11 +199,6 @@ body {
 #footer {
     background-image: linear-gradient(to right, #827397, #4D4C7D);
     color: #fff;
-}
-
-.footer-img {
-    height: 200px;
-    width: 1301px;
 }
 
 .footer-box {
